demo/20-egress-access-controls/dns-policy.netset.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.allow-twilio-access
spec:
  # requires security tier
  tier: security
  selector: (app == "centos" && projectcalico.org/namespace == "dev")
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    destination:
      selector: type == "external-apis"
