demo/20-egress-access-controls/dns-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.allow-twilio-access
spec:
  # requires security tier
  tier: security
  selector: (app == "centos" && projectcalico.org/namespace == "dev")
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    source: {}
    destination:
      domains:
      - '*.twilio.com'
